se hicieron cambios de textos y de index, favico, etc.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="vendor/twitter/bootstrap/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="author" href="humans.txt">
+	<link rel="icon" type="image/vnd.microsoft.icon" href="favicon.ico"/>	
 </head>
 <body>
 	<div id="background-holder">
@@ -26,7 +27,7 @@
 		<div class="nav nav-pills pull-right" style="padding: 10px;">
 			
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="http://misofom.com" target="_blank" class="btn btn-consulta">Iniciar sesión</a></li>
+				<li><a href="http://misofom.com" target="_blank" >Iniciar sesión</a></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right main-menu" style="margin-right: 10px;"></ul>
 		</div>
@@ -55,8 +56,10 @@
 	<footer id="footer" class="container">
 		<hr>
 		<div class="row">
-			<div class="col-lg-6">
-				<span data-ltag="copyright"></span>
+			<div class="col-lg-12">
+				<span data-ltag="copyright" class="glyphicon glyphicon-registration-mark"></span>
+				<span data-ltag="mail" class="glyphicon glyphicon-envelope"></span>
+				<span data-ltag="phone" class="glyphicon glyphicon-phone-alt"></span>
 			</div>
 		</div>
   </footer>
