--- a/index.html
+++ b/index.html
@@ -53,11 +53,13 @@
 		<hr>
 		<div class="row">
 			<div class="col-lg-12">
-				<span data-ltag="copyright" class="glyphicon glyphicon-registration-mark"></span>
-				<span data-ltag="mail" class="glyphicon glyphicon-envelope"></span>
-				<span data-ltag="phone" class="glyphicon glyphicon-phone-alt"></span>
+				<span data-ltag="copyright"></span>
+				<span data-ltag="mail"></span>
+				<span data-ltag="phone"></span>
+				<img src="./img/logo_uvicate.png" class="pull-right"/>
 			</div>
 		</div>
+		<hr>
   </footer>
 	<script type="text/javascript" src="js/json2005.js"></script> 
 	<script type="text/javascript" src="js/rsh.js"></script> 
