se agregaron textos a la pagina

--- a/modules/caracteristicas/html/main.html
+++ b/modules/caracteristicas/html/main.html
@@ -1,24 +1,60 @@
-<div class="container">
-	<div class="row featurette">
-        <div class="col-md-7">
-          <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your mind.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-        </div>
-        <div class="col-md-5">
-          <img class="featurette-image img-responsive" src="" data-src="holder.js/500x500/auto" alt="500x500">
-        </div>
-    </div>
-    <hr class="featurette-divider">
+<div class="container featuretravi">
+  <div class="row featurette feature-ppal">
+      <div class="col-md-7">
+        <h1 class="featurette-heading">
+            <span data-ltag="titulo1"></span>
+        </h1>
+          <p class="lead" data-ltag="texto1"></p>
+      </div>
+      <div class="col-md-5">
+          <img class="featurette-image img-responsive img-thumbnail" src="./img/caracteristicas/ppal.png">
+      </div>
+  </div>
+
+  <hr class="featurette-divider">
+
 
     <div class="row featurette">
         <div class="col-md-5">
-          <img class="featurette-image img-responsive" src="" data-src="holder.js/500x500/auto" alt="500x500">
+          <img class="featurette-image img-responsive img-thumbnail" src="./img/caracteristicas/perfiltran.png" >
         </div>
         <div class="col-md-7">
-          <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <h2 class="featurette-heading">
+            <span data-ltag="titulo2"></span>
+          </h2>
+          <p class="lead" data-ltag="texto2"></p>
         </div>
     </div>
+
     <hr class="featurette-divider">
+
+     <div class="row featurette">
+        <div class="col-md-7">
+          <h2 class="featurette-heading">
+            <span data-ltag="titulo3"></span>
+          </h2>
+          <p class="lead" data-ltag="texto3"></p>
+        </div>
+        <div class="col-md-5">
+          <img class="featurette-image img-responsive img-thumbnail" src="./img/caracteristicas/perfiltran.png" >
+        </div>
+    </div>
+
+    <hr class="featurette-divider">
+
+     <div class="row featurette">
+        <div class="col-md-5">
+          <img class="featurette-image img-responsive img-thumbnail" src="./img/caracteristicas/perfiltran.png" >
+        </div>
+        <div class="col-md-7">
+          <h2 class="featurette-heading">
+            <span data-ltag="titulo4"></span>
+          </h2>
+          <p class="lead" data-ltag="texto4"></p>
+        </div>
+    </div>
+
+    <hr class="featurette-divider">
+
 </div>
 
