--- a/modules/caracteristicas/html/main.html
+++ b/modules/caracteristicas/html/main.html
@@ -1,60 +1,62 @@
-<div class="container featuretravi">
-  <div class="row featurette feature-ppal">
-      <div class="col-md-7">
-        <h1 class="featurette-heading">
-            <span data-ltag="titulo1"></span>
-        </h1>
-          <p class="lead" data-ltag="texto1"></p>
+<div class="container-wrapper">
+  <div class="container featuretravi">
+    <div class="row featurette feature-ppal">
+        <div class="col-md-7">
+          <h1 class="featurette-heading">
+              <span data-ltag="titulo1"></span>
+          </h1>
+            <p class="lead" data-ltag="texto1"></p>
+        </div>
+        <div class="col-md-5">
+            <img class="featurette-image img-responsive img-thumbnail" src="./img/caracteristicas/ppal.png">
+        </div>
+    </div>
+
+    <hr class="featurette-divider">
+
+
+      <div class="row featurette">
+          <div class="col-md-5">
+            <img class="featurette-image img-responsive img-thumbnail" src="./img/caracteristicas/perfiltran.png" >
+          </div>
+          <div class="col-md-7">
+            <h2 class="featurette-heading">
+              <span data-ltag="titulo2"></span>
+            </h2>
+            <p class="lead" data-ltag="texto2"></p>
+          </div>
       </div>
-      <div class="col-md-5">
-          <img class="featurette-image img-responsive img-thumbnail" src="./img/caracteristicas/ppal.png">
+
+      <hr class="featurette-divider">
+
+       <div class="row featurette">
+          <div class="col-md-7">
+            <h2 class="featurette-heading">
+              <span data-ltag="titulo3"></span>
+            </h2>
+            <p class="lead" data-ltag="texto3"></p>
+          </div>
+          <div class="col-md-5">
+            <img class="featurette-image img-responsive img-thumbnail" src="./img/caracteristicas/perfiltran.png" >
+          </div>
       </div>
+
+      <hr class="featurette-divider">
+
+       <div class="row featurette">
+          <div class="col-md-5">
+            <img class="featurette-image img-responsive img-thumbnail" src="./img/caracteristicas/perfiltran.png" >
+          </div>
+          <div class="col-md-7">
+            <h2 class="featurette-heading">
+              <span data-ltag="titulo4"></span>
+            </h2>
+            <p class="lead" data-ltag="texto4"></p>
+          </div>
+      </div>
+
+      <hr class="featurette-divider">
+
   </div>
-
-  <hr class="featurette-divider">
-
-
-    <div class="row featurette">
-        <div class="col-md-5">
-          <img class="featurette-image img-responsive img-thumbnail" src="./img/caracteristicas/perfiltran.png" >
-        </div>
-        <div class="col-md-7">
-          <h2 class="featurette-heading">
-            <span data-ltag="titulo2"></span>
-          </h2>
-          <p class="lead" data-ltag="texto2"></p>
-        </div>
-    </div>
-
-    <hr class="featurette-divider">
-
-     <div class="row featurette">
-        <div class="col-md-7">
-          <h2 class="featurette-heading">
-            <span data-ltag="titulo3"></span>
-          </h2>
-          <p class="lead" data-ltag="texto3"></p>
-        </div>
-        <div class="col-md-5">
-          <img class="featurette-image img-responsive img-thumbnail" src="./img/caracteristicas/perfiltran.png" >
-        </div>
-    </div>
-
-    <hr class="featurette-divider">
-
-     <div class="row featurette">
-        <div class="col-md-5">
-          <img class="featurette-image img-responsive img-thumbnail" src="./img/caracteristicas/perfiltran.png" >
-        </div>
-        <div class="col-md-7">
-          <h2 class="featurette-heading">
-            <span data-ltag="titulo4"></span>
-          </h2>
-          <p class="lead" data-ltag="texto4"></p>
-        </div>
-    </div>
-
-    <hr class="featurette-divider">
-
 </div>
 
