Cambios en Que hay dentro de Travi

--- a/modules/adquirir/html/main.html
+++ b/modules/adquirir/html/main.html
@@ -8,6 +8,11 @@
 
   		</p>
 
+  		<h3 style="font-family: open_sanslight;">Comunicate con un agente de ventas al <span style="color: #22945d;">01 800 500 CREA (2732)</span></h3>
+  		<p>O por correo electrónico <span><a href="mailto:contacto@uvicate.com"><h3 style="font-family: open_sanslight;">contacto@uvicate.com</h3></a></span></p>
+  		
+
+
   		<h3>Propuesta de inversión</h3>
   		<table class="table">
   			<tr>
