--- a/modules/especificaciones/html/main.html
+++ b/modules/especificaciones/html/main.html
@@ -8,7 +8,7 @@
 		  	<td>
 		  		<strong>Seguridad</strong>
 		  	</td>
-		  	<td><img src="./img/especificaciones/seguridad.png" class="img-circle spec-img"></td>
+		  	<td><img src="./img/especificaciones/seguridad.png" class="img-responsive spec-img"></td>
 		  	<td>
 		  		<p>&#149; Conexión cifrada por medio de certificado SSL.</p>
 		  		<p>&#149; Encriptación de contraseñas por medio de bCrypt a 256 bits.</p>
@@ -19,7 +19,7 @@
 		  	<td>
 		  		<strong>Libre de infraestructura</strong>
 		  	</td>
-		  	<td><img src="./img/especificaciones/libre-infra.png" class="img-circle spec-img"></td>
+		  	<td><img src="./img/especificaciones/libre-infra.png" class="img-responsive spec-img"></td>
 		  	<td>
 		  		<strong>Travi es un software en linea el cual no requiere tener infraestructura especializada en sus oficinas.</strong>
 		  		<br>
@@ -37,7 +37,7 @@
 		  	<td>
 		  		<strong>Colaboración</strong>
 		  	</td>
-		  	<td><img src="./img/especificaciones/colaboracion.png" class="img-circle spec-img"></td>
+		  	<td><img src="./img/especificaciones/colaboracion.png" class="img-responsive spec-img"></td>
 		  	<td>
 		  		<p>&#149; Conexión ilimitada de usuarios simultaneos</p>
 		  		<p>Manejo individual de permisos para cada usuario por modulo:</p>
@@ -51,7 +51,7 @@
 		  	<td>
 		  		<strong>Integridad de datos</strong>
 		  	</td>
-		  	<td><img src="./img/especificaciones/integridad.png" class="img-circle spec-img"></td>
+		  	<td><img src="./img/especificaciones/integridad.png" class="img-responsive spec-img"></td>
 		  	<td>
 		  		<p>&#149; Respaldos de información cada 24 horas todos los dias del año.</p>
 
@@ -61,7 +61,7 @@
 		  	<td>
 		  		<strong>Disposición de datos</strong>
 		  	</td>
-		  	<td><img src="./img/especificaciones/disposicion.png" class="img-circle spec-img"></td>
+		  	<td><img src="./img/especificaciones/disposicion.png" class="img-responsive spec-img"></td>
 		  	<td>
 		  		<p>&#149; Dispon de tus datos almacenados cuando lo requieras</p>
 		  	</td>
@@ -70,7 +70,7 @@
 		  	<td>
 		  		<strong>Servicio de migración</strong>
 		  	</td>
-		  	<td><img src="./img/especificaciones/migracion.png" class="img-circle spec-img"></td>
+		  	<td><img src="./img/especificaciones/migracion.png" class="img-responsive spec-img"></td>
 		  	<td>
 		  		<p>Comienza a utilizar Travi con toda la información de tus clientes existentes</p>
 		  		<p>&#149; Servicio especializado de migración de hojas de calculo y otros sistemas a Travi.</p>
@@ -81,7 +81,7 @@
 		  	<td>
 		  		<strong>Interfaz</strong>
 		  	</td>
-		  	<td><img src="./img/especificaciones/interfaz.png" class="img-circle spec-img"></td>
+		  	<td><img src="./img/especificaciones/interfaz.png" class="img-responsive spec-img"></td>
 		  	<td>
 		  		<p>Interfaz intuitiva que te ayudara a reducir el tiempo de capacitación de tus empleados.</p>
 		  	</td>
@@ -97,7 +97,7 @@
   		<br>
   		<a href="https://github.com/uvicate/WebApp" target="_blank"><strong>uVicate webApp</strong></a>
   		<br>
-  		<small>Created by <a href="https://github.com/victorhqc" target="_blank">@victorhqc</a></small>
+  		<small>Created by <a href="https://github.com/organizations/uvicate" target="_blank">Soluciones uVicate SA de CV</a></small>
   		<br>
   		<a href="http://jquery.com" target="_blank"><strong>JQuery</strong></a>
   		<br>
@@ -113,7 +113,7 @@
   		<br>
   		<a href="http://www.mysql.com/" target="_blank"><strong>MySQL</strong></a>
   		<br>
-  		<small>Created by <a href="http://www.oracle.com/index.html" target="_blank">ORACLE</a></small>
+  		<small><a href="http://www.oracle.com/index.html" target="_blank">ORACLE</a></small>
   		<br>
   		
   	</div>
