correciones para subir la pagina

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ conoce todas las ventajas que tenemos para agilizar tu empresa.">
     </div>
     <div class="col-lg-10">
     	<ul class="nav navbar-nav navbar-right">
-       	<a href="http://misofom.com" target="_blank" class="btn btn-comienza" style="margin-left:10px;"><span>Acceder a Travi</span></a>
+       	<a href="http://misofom.com/travi" target="_blank" class="btn btn-comienza" style="margin-left:10px;"><span>Acceder a Travi</span></a>
       </ul>
       <ul class="nav navbar-nav navbar-right main-menu">
        
