--- a/modules/caracteristicas/html/main.html
+++ b/modules/caracteristicas/html/main.html
@@ -1,19 +1,16 @@
 <div class="container">
   <div class="row">
-    <div class="col-lg-3">
-      <div class="bs-sidebar">
-        <ul class="nav bs-sidenav bs-js-navbar-scrollspy affix" id="navbar-example2" data-spy="affix">
-          <li> <a href="#car-1">Administración de operaciones </a> </li>
-          <li> <a href="#car-2">Organos supervisores</a> </li>
-          <li> <a href="#car-3">Tecnológia para colaboración</a> </li>
-          <li> <a href="#car-4">Modulos para SOFOM</a> </li>
-        </ul>
-      </div>
-    </div>
-    <div class="col-lg-9">
-      <div data-spy="scroll" data-target="#navbar-example2"  class="scrollspy-example">
-        <h1 id="car-1" class="page-header"> Administración de operaciones </h1>
-        <p>&#149; Perfil transaccional de clientes.</p>
+    <div class="col-lg-12">
+
+      <h3 class="page-header">Caracteristicas</h3>
+      <table class="table">
+      <tr>
+        <td>
+          <strong>Administración de operaciones</strong>
+        </td>
+        <td><img src="./img/caracteristicas/admin.png" class="img-responsive spec-img"></td>
+        <td>
+         <p>&#149; Perfil transaccional de clientes.</p>
         <p>&#149; Créditos</p>
         <p>&#149; Caja</p>
         <p>&#149; Cobranza masiva</p>
@@ -26,10 +23,17 @@
           <p>&#149; Por cobrar</p>
           <p>&#149; MIF</p>
         </blockquote>
-        <h1 id="car-2" class="page-header"> Organos supervisores <br>
-          <small>Siempre cumpliendo las normativas de los diferentes órganos gubernamentales supervisores</small> </h1>
+        </td>
+      </tr>
+       <tr>
+        <td>
+          <strong>Organos supervisores</strong>
+        </td>
+        <td><img src="./img/caracteristicas/organos.png" class="img-responsive spec-img"></td>
+        <td>
+         <small>Siempre cumpliendo las normativas de los diferentes órganos gubernamentales supervisores</small> </h1>
         <p>&#149; Módulo de PLD/FT</p>
-        <h3>Catálogos precargados de la CNBV para reportes:</h3>
+        <strong>Catálogos precargados de la CNBV para reportes:</strong>
         <blockquote>
           <p>&#149; Inusuales</p>
           <p>&#149; Internos preocupantes</p>
@@ -37,31 +41,51 @@
           <p>&#149; Detección de personas políticamente expuestas</p>
           <p>&#149; Constante actualización para el cumplimiento de los lineamientos ante la CONDUSEF</p>
         </blockquote>
-        <h1 id="car-3" class="page-header"> Tecnológia para colaboración </h1>
-        <p>&#149; No se necesita de una infraestructura específica; Una computadora, una tablet o un celular con conexión a Internet son suficientes.</p>
+          
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <strong>Ventajas tecnológicas</strong>
+        </td>
+        <td><img src="./img/caracteristicas/tecno.png" class="img-responsive spec-img"></td>
+        <td>
+          <p>&#149; No se necesita de una infraestructura específica; Una computadora, una tablet o un celular con conexión a Internet son suficientes.</p>
         <p>&#149; Accesible a cualquier hora y desde cualquier lugar.</p>
         <p>&#149; Actualizaciones automáticas y transparentes, con lo cual siempre tendrá la última versión de Travi al instante y sin costos extras.</p>
         <p>&#149; Interfaz de usuario que no requiere de alta capacitación.</p>
         <p>&#149; Estructura modular que permite ampliar al sistema sus funcionalidades de acuerdo a las necesidades de sus usuarios.</p>
-        <h1 id="car-4" class="page-header"> Modulos para tu SOFOM </h1>
-        <p>&#149; Resumen (Panel principal)</p>
+        </td>
+      </tr>
+     
+      <tr>
+        <td>
+          <strong>Modulos para SOFOM</strong>
+        </td>
+        <td><img src="./img/caracteristicas/modulos.png" class="img-responsive spec-img"></td>
+        <td>
+         <p>&#149; Resumen (Panel principal)</p>
         <p>&#149; Simulador de créditos</p>
         <p>&#149; Caja</p>
         <h4>Reportes</h4>
-		<p>&#149; Avisos</p>
-		<p>&#149; Cheques</p>
-		<p>&#149; Indicadores financieros</p>
-		<h4>Créditos</h4>
-		<p>&#149; Creditos nuevos</p>
-		<p>&#149; Creditos activos</p>
-		<p>&#149; Cobros masivos (Especializado para creditos nominales)</p>
-		<p>&#149; Pre-autorización de créditos</p>
-		<p>&#149; Historial</p>
+    <p>&#149; Avisos</p>
+    <p>&#149; Cheques</p>
+    <p>&#149; Indicadores financieros</p>
+    <h4>Créditos</h4>
+    <p>&#149; Creditos nuevos</p>
+    <p>&#149; Creditos activos</p>
+    <p>&#149; Cobros masivos (Especializado para creditos nominales)</p>
+    <p>&#149; Pre-autorización de créditos</p>
+    <p>&#149; Historial</p>
         <h4>Configuración</h4>
         <p>&#149; Usuarios</p>
-		<p>&#149; Configuración de parametros</p>
-		<p>&#149; Configuración de contratos</p>
-      </div>
+    <p>&#149; Configuración de parametros</p>
+    <p>&#149; Configuración de contratos</p>
+        </td>
+      </tr>
+    </table>
+
     </div>
+   
   </div>
 </div>
