Cambio de textos y permisos

--- a/modules/adquirir/html/main.html
+++ b/modules/adquirir/html/main.html
@@ -2,7 +2,12 @@
   <div class="row">
   	<div class="col-lg-12">
   		<h1 class="page-header">Como adquirir Travi</h1>
-  		<p>Nuestros diferentes planes de arrendamiento estan segmentados en base a el numero de créditos activos por SOFOM <br><small>sin importar la cantidad de sucursales que esta tenga dadas de alta.</small><br>
+
+      <h3 style="font-family: open_sanslight;">Comunicate con un agente de ventas al <span style="color: #22945d;">01 800 500 CREA (2732)</span></h3>
+      <p>O por correo electrónico <span><a href="mailto:contacto@uvicate.com"><h3 style="font-family: open_sanslight;">contacto@uvicate.com</h3></a></span></p>
+
+
+  		<p>Nuestros diferentes planes de arrendamiento estan segmentados en base a el numero de créditos activos por SOFOM <br>sin importar la cantidad de sucursales que esta tenga dadas de alta.<br>
 
 
 
@@ -49,13 +54,6 @@
   			
   		</blockquote>
 
-  		<hr>
-
-  		<h3 style="font-family: open_sanslight;">Comunicate con un agente de ventas al <span style="color: #22945d;">01 800 500 CREA (2732)</span></h3>
-  		<p>O por correo electrónico <span><a href="mailto:contacto@uvicate.com"><h3 style="font-family: open_sanslight;">contacto@uvicate.com</h3></a></span></p>
-  		
-
-  		<hr>
 
   	</div>
   </div>
