unos cambios de SEO

--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@ conoce todas las ventajas que tenemos para agilizar tu empresa.">
 
 
 
-		<div id="main"></div>
+		<div id="main"><p>La administración y operación de tu microfinanciera coordinadas para otorgarte el control total de tu capital y equipo de trabajo, 
+Conoce todas las ventajas que tenemos para agilizar tu empresa.</p></div>
 		<hr>
 		<div class="footer"> <a href="" target="_blank">Aviso de privacidad</a><span> | © Travi 2013 </span><a href="#nosotros"> </a></span> </div>
 	</div>
