--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ conoce todas las ventajas que tenemos para agilizar tu empresa.">
     color: gray;
     margin-right: 15px;
 ">Asistencia al cliente 01 800 500 CREA (2732)</p></div>
-
+<div class="row">
     	<ul class="nav navbar-nav navbar-right">
        		<a href="http://misofom.com/travi" target="_blank" class="btn btn-comienza" style="margin-left:10px;"><span>Acceder a Travi</span></a>
       	</ul>
@@ -40,9 +40,9 @@ conoce todas las ventajas que tenemos para agilizar tu empresa.">
      	 <a class="logo brand hidden-sm" href="#inicio">
       
       </a> 
-
-      <div class="logo visible-sm"></div>
     <!-- End of "container" div --></div>
+
+</div>
 
     </div>
   <!-- End of "navbar-inner" div --></header>
